# ucd-csci2312-pa1

./: CMakeLists.txt  Point.cpp  Point.h  PointTests.cpp  README.md  area.cpp  main.cpp
